# bolt

./: .clang-tidy  .codespellrc  .gitattributes  .gitignore  .licenserc.yaml  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  MANIFEST.in  Makefile  NOTICE.txt  conanfile.py  license.header
bolt/: CMakeLists.txt
bolt/benchmarks/: CMakeLists.txt  ExpressionBenchmarkBuilder.cpp  ExpressionBenchmarkBuilder.h  QueryBenchmarkBase.cpp  QueryBenchmarkBase.h
bolt/benchmarks/basic/: CMakeLists.txt  CastBenchmark.cpp  ComparisonConjunct.cpp  Preproc.cpp  (+11 more)
bolt/buffer/: Buffer.cpp  Buffer.h  CMakeLists.txt  StringViewBufferHolder.cpp  StringViewBufferHolder.h
bolt/common/: CMakeLists.txt  Casts.h
bolt/connectors/: CMakeLists.txt  Connector.cpp  Connector.h
bolt/core/: CMakeLists.txt  Config.cpp  Config.h  Context.cpp  Context.h  CoreTypeSystem.h  ExpressionEvaluator.h  Expressions.cpp  Expressions.h  ITypedExpr.h  Metaprogramming.h  PlanFragment.cpp  PlanFragment.h  PlanNode.cpp  PlanNode.h  QueryConfig.cpp  QueryConfig.h  QueryCtx.cpp  QueryCtx.h  SimpleFunctionMetadata.cpp  SimpleFunctionMetadata.h
bolt/cudf/: CMakeLists.txt  CudfEnable.h  CudfOperators.h
bolt/duckdb/: CMakeLists.txt
bolt/dwio/: CMakeLists.txt
bolt/examples/: CMakeLists.txt  ExpressionEval.cpp  OpaqueType.cpp  OperatorExtensibility.cpp  ScanAndSort.cpp  ScanOrc.cpp  SimpleFunctions.cpp  VectorReaderWriter.cpp
bolt/exec/: AddressableNonNullValueList.cpp  AddressableNonNullValueList.h  Aggregate.cpp  Aggregate.h  AggregateCompanionAdapter.cpp  AggregateCompanionAdapter.h  AggregateCompanionSignatures.cpp  AggregateCompanionSignatures.h  AggregateFunctionRegistry.cpp  AggregateFunctionRegistry.h  AggregateInfo.cpp  AggregateInfo.h  AggregateUtil.h  AggregateWindow.cpp  AggregateWindow.h  AggregationHook.h  AggregationMasks.cpp  AggregationMasks.h  ArrowStream.cpp  ArrowStream.h  AssignUniqueId.cpp  AssignUniqueId.h  CMakeLists.txt  CallbackSink.h  ContainerRow2RowSerde.cpp  ContainerRow2RowSerde.h  ContainerRowSerde.cpp  ContainerRowSerde.h  DistinctAggregations.cpp  DistinctAggregations.h  Driver.cpp  Driver.h  EnforceSingleRow.cpp  EnforceSingleRow.h  Exchange.cpp  Exchange.h  ExchangeClient.cpp  ExchangeClient.h  ExchangeQueue.cpp  ExchangeQueue.h  (+161 more)
bolt/expression/: BooleanMix.cpp  BooleanMix.h  CMakeLists.txt  CastExpr-inl.h  CastExpr-tpl.cpp  CastExpr-tpl.h  CastExpr.cpp  CastExpr.h  CastHooks.h  CoalesceExpr.cpp  CoalesceExpr.h  ComplexViewTypes.h  ComplexWriterTypes.h  ConjunctExpr.cpp  ConjunctExpr.h  ConstantExpr.cpp  ConstantExpr.h  DecodedArgs.h  EvalCtx.cpp  EvalCtx.h  Expr.cpp  Expr.h  ExprCompiler.cpp  ExprCompiler.h  ExprStats.h  ExprToSubfieldFilter.cpp  ExprToSubfieldFilter.h  FieldReference.cpp  FieldReference.h  FunctionCallToSpecialForm.cpp  FunctionCallToSpecialForm.h  FunctionSignature.cpp  FunctionSignature.h  GenericWriter.cpp  LambdaExpr.cpp  LambdaExpr.h  PeeledEncoding.cpp  PeeledEncoding.h  PrestoCastHooks.cpp  PrestoCastHooks.h  (+30 more)
bolt/flag_definitions/: CMakeLists.txt  flags.cpp
bolt/functions/: CMakeLists.txt  CoverageUtil.cpp  CoverageUtil.h  FunctionRegistry.cpp  FunctionRegistry.h  InlineFlatten.h  Macros.h  README.md  Registerer.h  UDFOutputString.h  Udf.h
bolt/jit/: CMakeLists.txt  LRUCache.h  ThrustJIT.cpp  ThrustJIT.h  common.h
bolt/parse/: CMakeLists.txt  DuckLogicalOperator.h  Expressions.cpp  Expressions.h  ExpressionsParser.cpp  ExpressionsParser.h  IExpr.h  PlanNodeIdGenerator.h  QueryPlanner.cpp  QueryPlanner.h  TypeResolver.cpp  TypeResolver.h
bolt/python/: Aggregate.cpp  Aggregate.h  CMakeLists.txt  Function.cpp  Function.h  Operator.cpp  Operator.h  PlanNode.cpp  PlanNode.h  PythonScalarFunction.cpp  PythonScalarFunction.h  Utils.cpp  Utils.h
bolt/row/: CMakeLists.txt  CompactRow.cpp  CompactRow.h  UnsafeRow.h  UnsafeRowDeserializers.h  UnsafeRowFast.cpp  UnsafeRowFast.h
bolt/serializers/: ArrowSerializer.cpp  CMakeLists.txt  CompactRowSerializer.cpp  CompactRowSerializer.h  PrestoSerializer.cpp  PrestoSerializer.h  UnsafeRowSerializer.cpp  UnsafeRowSerializer.h
bolt/shuffle/: CMakeLists.txt
bolt/substrait/: BoltSubstraitSignature.cpp  BoltSubstraitSignature.h  BoltToSubstraitExpr.cpp  BoltToSubstraitExpr.h  BoltToSubstraitPlan.cpp  BoltToSubstraitPlan.h  BoltToSubstraitType.cpp  BoltToSubstraitType.h  CMakeLists.txt  SubstraitExtensionCollector.cpp  SubstraitExtensionCollector.h  SubstraitParser.cpp  SubstraitParser.h  SubstraitToBoltExpr.cpp  SubstraitToBoltExpr.h  SubstraitToBoltPlan.cpp  SubstraitToBoltPlan.h  TypeUtils.cpp  TypeUtils.h  VariantToVectorConverter.cpp  VariantToVectorConverter.h
bolt/tool/: CMakeLists.txt
bolt/torch/: CMakeLists.txt  Compatibility.cpp  Compatibility.h  Operator.cpp  Operator.h  PlanNode.cpp  PlanNode.h  Tensor.cpp  Tensor.h  Utils.cpp  Utils.h
bolt/type/: BigDecimal.cpp  BigDecimal.h  CMakeLists.txt  Conversions.cpp  Conversions.h  DecimalUtil.cpp  DecimalUtil.h  Filter.h  FloatingDecimal.cpp  FloatingDecimal.h  FloatingPointUtil.cpp  FloatingPointUtil.h  HugeInt.cpp  HugeInt.h  NumericTypeUtils.h  OpaqueCustomTypes.h  StringView.cpp  StringView.h  Subfield.cpp  Subfield.h  Timestamp.cpp  Timestamp.h  TimestampConversion.cpp  TimestampConversion.h  Tokenizer.cpp  Tokenizer.h  Tree.h  Type.cpp  Type.h  TypeParser.h  Variant.cpp  Variant.h
bolt/vector/: BaseVector.cpp  BaseVector.h  BiasVector-inl.h  BiasVector.h  BuilderTypeUtils.h  CMakeLists.txt  ComplexVector.cpp  ComplexVector.h  ConstantVector-inl.h  ConstantVector.cpp  ConstantVector.h  DecodedVector.cpp  DecodedVector.h  DictionaryVector-inl.h  DictionaryVector.h  FlatVector-inl.h  FlatVector.cpp  FlatVector.h  FunctionVector.h  LazyVector.cpp  LazyVector.h  NullsBuilder.h  SelectivityVector.cpp  SelectivityVector.h  SequenceVector-inl.h  SequenceVector.cpp  SequenceVector.h  SimpleVector.cpp  SimpleVector.h  TypeAliases.h  VariantToVector.cpp  VariantToVector.h  VectorEncoding.cpp  VectorEncoding.h  VectorPool.cpp  VectorPool.h  VectorPrinter.cpp  VectorPrinter.h  VectorSaver.cpp  VectorSaver.h  (+4 more)
bolt/version/: CMakeLists.txt  version.h.in
(+2554 files in other folders)
